# Beagle-Bone---Car-and-Pedestrian-Detection

./: README.md
host/: CMakeLists.txt
host/app/: CMakeLists.txt
host/app/include/: distance.h  listen_joystick.h  receive.h  send_dst.h
host/app/src/: distance.cpp  listen_joystick.cpp  main.cpp  receive.cpp  send_dst.cpp
host/hal/: CMakeLists.txt
